[project]
name = "shivad"
version = "0.4.18"
description = "A modern, async Python framework for distributed systems and microservices."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Boris Soldatov", email = "djsaff@gmail.com" }
]
license = "MIT"
dependencies = [
    "aiobotocore>=2.16.0,<3.0.0",
    "aiomisc>=17.9.9,<18.0.0",
    "aio-pika>=9.5.8,<10.0.0",
    "argparse>=1.4.0,<2.0.0",
    "art>=5.2,<6.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "fastapi>=0.124.0,<0.125.0",
    "fastapi-restful",
    "fastapi-utils[all]>=0.8.0,<1.0.0",
    "flatdict>=4.0.1,<5.0.0",
    "keyring>=25.0.0,<26.0.0",
    "loguru>=0.7.2,<1.0.0",
    "mako>=1.3.0,<2.0.0",
    "marshmallow>=3.13.0,<4.0.0",
    "motor>=3.7.1,<4.0.0",
    "orjson>=3.5.2,<4.0.0",
    "packaging>=24.0,<25.0",
    "prometheus-client>=0.18.0,<1.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "redis>=5.0.0,<6.0.0",
    "sentry-sdk>=2.47.0,<3.0.0",
    "setuptools>=80.9.0",
    "starlette>=0.50.0,<0.51.0",
    "twine>=5.0.0,<6.0.0",
    "typer>=0.20.0,<0.21.0",
    "uvicorn>=0.38.0,<0.39.0",
    "uvloop>=0.21.0,<1.0.0; sys_platform == 'darwin' or sys_platform == 'linux'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.22.1,<9.0.0"
]

[project.scripts]
shiva = "shiva.shiva_cli:main"

[project.urls]
homepage = "https://github.com/Zl0n1k/shivad"
bug-tracker = "https://github.com/Zl0n1k/shivad/issues"
documentation = "https://github.com/Zl0n1k/shivad#readme"

[tool.uv]
# You can add uv-specific configuration here if needed

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = "."
