[project]
name = "shivad"
version = "0.5.2"
description = "A modern, async Python framework for distributed systems and microservices."
readme = "README.md"
requires-python = ">=3.13"

authors = [
  { name = "Boris Soldatov", email = "djsaff@gmail.com" }
]

license = "MIT"
license-files = ["LICENSE"]

dependencies = [

  # === Async ecosystem ===
  "aiobotocore>=2.16.0,<3.0.0",
  "aiomisc>=17.9.9,<18.0.0",
  "aio-pika>=9.5.8,<10.0.0",
  "asyncpg>=0.31.0,<0.32.0",
  "motor>=3.7.1,<4.0.0",

  # === Web layer ===
  "fastapi>=0.124.0,<1.0.0",
  "fastapi-restful",
  "fastapi-utils[all]>=0.8.0,<1.0.0",
  "uvicorn>=0.38.0,<0.39.0",

  # === Serialization / config ===
  "orjson>=3.5.2,<4.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "marshmallow>=3.13.0,<4.0.0",

  # === Infra / observability ===
  "prometheus-client>=0.18.0,<1.0.0",
  "sentry-sdk>=2.47.0,<3.0.0",
  "redis>=7.1.1,<8.0.0",

  # === Utilities ===
  "keyring>=25.0.0,<26.0.0",
  "loguru>=0.7.2,<1.0.0",
  "mako>=1.3.0,<2.0.0",
  "packaging>=24.0,<25.0",
  "typer>=0.20.0,<0.21.0",

  # uvloop just for Linux/macOS
  "uvloop>=0.21.0,<1.0.0; sys_platform == 'darwin' or sys_platform == 'linux'",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
dev = [
  "ipython>=8.22.1,<9.0.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "twine>=5.0.0,<6.0.0",
]

[project.scripts]
shiva = "shiva.shiva_cli:main"

[project.urls]
homepage = "https://github.com/Zl0n1k/shivad"
bug-tracker = "https://github.com/Zl0n1k/shivad/issues"
documentation = "https://github.com/Zl0n1k/shivad#readme"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]